--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,9 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">Meskhi 2000</div>
+                <div class="logo">
+                    <img src="logo3-Photoroom.png" alt="">
+                </div>
                 <ul class="nav-links">
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#capabilities">Capabilities</a></li>
