--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,22 +1,16 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
-  body {
-    color: #333;
-    line-height: 1.6;
-    background-color: #f5f3ee; 
-  }
-  
-  .container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
   
   // Variables
   $gold-primary: #d4af37; // Rich gold
@@ -31,58 +25,63 @@
   $gray-dark: #2d2d2d; // Darker gray
   
 
-  header {
-    background-color: #f9f9f7; 
-    box-shadow: 0 2px 10px rgba(218, 184, 93, 0.2);
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 1000;
-  
-    nav {
+
+header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+
+  nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px 0;
+
+    .logo {
+      font-size: 28px;
+      font-weight: 700;
+      color: $gold-primary;
+       
+       img {
+        width: 70px;
+        height: auto;
+       }
+    }
+
+    .nav-links {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 0;
-  
-      .logo {
-        font-size: 28px;
-        font-weight: 700;
-        color: $gold-primary;
+      list-style: none;
+
+      li {
+        margin-left: 30px;
       }
-  
-      .nav-links {
-        display: flex;
-        list-style: none;
-  
-        li {
-          margin-left: 30px;
-        }
-  
-        a {
-          text-decoration: none;
-          color: #333;
-          font-weight: 500;
-          transition: color 0.3s;
-  
-          &:hover {
-            color: $gold-primary;
-          }
-        }
-      }
-  
-      .contact-button {
-        background-color: $gold-primary;
-        color: white;
-        padding: 10px 20px;
-        border-radius: 5px;
+
+      a {
         text-decoration: none;
+        color: $ivory;
         font-weight: 500;
-        transition: background-color 0.3s;
-  
+        transition: color 0.3s;
+        font-size: 20px;
+
         &:hover {
-          background-color: $gold-dark;
+          color: $gold-primary;
         }
       }
     }
+
+    .contact-button {
+      background-color: $gold-primary;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: 500;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: $gold-dark;
+      }
+    }
+  }
 }
