new home page and i have new style for this

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,3 +9,32 @@
       <span></span>
     </button>
   </div> 
+
+
+
+
+
+<div>
+  <section class="about-section">
+    <div class="person-image">
+      <img src="leqso 2.png" alt="ხელმძღვანელი">
+    </div>
+    
+    <div class="about-content">
+      <h2>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი</h2>
+      <div class="founder-name">ალეკო ყურაშვილი</div>
+      
+      <div class="company-description">
+        <p>კომპანია „მესხი 2000" დაარსდა 2000 წელს. პირველი დღეებიდან და დღემდე, ფირმამ დაიმკვიდრა აღიარებული პოზიციები ბაზარზე, როგორც სამშენებლო კომპანიების, ბანკების, დიზაინის ფირმებისა, იურიდიული კომპანიების სანდო და კეთილსინდისიერი პარტნიორი. ჩვენთვის უმთავრესია გავამართლოთ მომხმარებლის იმედები და მოლოდინები.</p>
+      </div>
+      
+      <div class="slogan">
+        "ინოვაცია და მაღალი ხარისხი ჩვენი მომსახურების უპირველესი სტანდარტია - „მესხი 2000"."
+      </div>
+      
+      <a href="#" class="button">გაიგე მეტი</a>
+    </div>
+  </section>
+  
+  <button class="contact-button">დაგვიკავშირდით</button>
+</div>
