--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="logo3-Photoroom.png" alt="">
+                    <img src="logo.png" alt="">
                 </div>
                 <ul class="nav-links">
                     <li><a href="#skills">Skills</a></li>
