--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
    <div class="video-container">
-    <video #videoPlayer src="Meskhi 2000 3 16 2025 13 3 30 Contentcore.Xyz_1.mp4" [muted]="true" [loop]="false" [controls]="false"></video>
+
+    <div class="text-3d">Meskhi 2000</div>
 
 
-    <p>"ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას"</p>
+    <p>"ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას."</p>
 
     <button class="animated-button">
       <span>გაიგეთ მეტი</span>
@@ -12,29 +13,64 @@
 
 
 
-
-
-<div>
-  <section class="about-section">
-    <div class="person-image">
-      <img src="leqso 2.png" alt="ხელმძღვანელი">
-    </div>
-    
-    <div class="about-content">
-      <h2>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი</h2>
-      <div class="founder-name">ალეკო ყურაშვილი</div>
-      
-      <div class="company-description">
-        <p>კომპანია „მესხი 2000" დაარსდა 2000 წელს. პირველი დღეებიდან და დღემდე, ფირმამ დაიმკვიდრა აღიარებული პოზიციები ბაზარზე, როგორც სამშენებლო კომპანიების, ბანკების, დიზაინის ფირმებისა, იურიდიული კომპანიების სანდო და კეთილსინდისიერი პარტნიორი. ჩვენთვის უმთავრესია გავამართლოთ მომხმარებლის იმედები და მოლოდინები.</p>
+<!--   
+<div class="container">
+  <section class="about-section"  >
+    <div class="content-wrapper">
+      <div class="person-image" >
+        <img src="leqso 2 - Copy.png" alt="ხელმძღვანელი">
       </div>
       
-      <div class="slogan">
-        "ინოვაცია და მაღალი ხარისხი ჩვენი მომსახურების უპირველესი სტანდარტია - „მესხი 2000"."
+      <div class="about-content">
+        <h2>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი        </h2>
+        <div class="founder-name">ალექსი ყულჯანიშვილი</div>
+        
+        <div class="company-description">
+          <p>კომპანია ,,მესხი 2000" ბაზარზე 2000 წელს გამოჩნდა და დაარსების დღიდან აქტიურად ემსახურება მომხმარებელს, რომლის მიზანია დამკვეთის ერთგულების მოპოვება, ხარისხის კონტროლი, სიახლეების ათვისება და განვითარებისკენ მუდმივი სწრაფვა. უახლესი ტექნოლოგიებით ვამზადებთ საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.</p>
+        </div>
+        
+        <div class="slogan">
+          ინოვაცია და მაღალი ხარისხი ჩვენი მომხმარებლის კეთილგანწყობის საწინდარია - ,,მესხი 2000"
+        </div>
+        
+        <a href="#" class="button">გაიგე მეტი</a>
       </div>
-      
-      <a href="#" class="button">გაიგე მეტი</a>
     </div>
   </section>
   
-  <button class="contact-button">დაგვიკავშირდით</button>
+  <div class="contact-button-wrapper">
+    <button class="contact-button">დაგვიკავშირდით</button>
+  </div>
+</div> 
+
+ -->
+
+
+ <div class="container">
+  <section class="about-section">
+    <div class="content-wrapper">
+      <div class="person-image animate-element" #animateOnScroll>
+        <img src="leqso 2 - Copy.png" alt="ხელმძღვანელი">
+      </div>
+      
+      <div class="about-content">
+        <h2 class="animate-element" #animateOnScroll>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი</h2>
+        <div class="founder-name animate-element" #animateOnScroll>ალექსი ყულჯანიშვილი</div>
+        
+        <div class="company-description animate-element" #animateOnScroll>
+          <p>კომპანია ,,მესხი 2000" ბაზარზე 2000 წელს გამოჩნდა და დაარსების დღიდან აქტიურად ემსახურება მომხმარებელს, რომლის მიზანია დამკვეთის ერთგულების მოპოვება, ხარისხის კონტროლი, სიახლეების ათვისება და განვითარებისკენ მუდმივი სწრაფვა. უახლესი ტექნოლოგიებით ვამზადებთ საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.</p>
+        </div>
+        
+        <div class="slogan animate-element" #animateOnScroll>
+          ინოვაცია და მაღალი ხარისხი ჩვენი მომხმარებლის კეთილგანწყობის საწინდარია - ,,მესხი 2000"
+        </div>
+        
+        <a href="#" class="button animate-element" #animateOnScroll>გაიგე მეტი</a>
+      </div>
+    </div>
+  </section>
+  
+  <div class="contact-button-wrapper animate-element" #animateOnScroll>
+    <button class="contact-button">დაგვიკავშირდით</button>
+  </div>
 </div>
