naxe sul dabla momiti

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -77,15 +77,4 @@
 
 
 
-<div #animatedDiv class="scroll-animation">
-  <p>sabaaaaaaa</p>
-  <p>sabaaaaaaa</p>
-  <p>sabaaaaaaa</p>
-  <p>sabaaaaaaa</p>
-  <p>sabaaaaaaa</p>
-  <p>sabaaaaaaa</p>
-  <p>sabaaaaaaa</p>
-  <p>sabaaaaaaa</p>
-  <p>sabaaaaaaa</p>
-  <p>sabaaaaaaa</p>
-</div>
+<!-- unda vnaxo @viewchild rogor mushaobs da gamoviyeno scoll animation is dros !!!! -->
