mushaobs scroll animation gavaketet

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,7 +45,7 @@
 
  -->
 
-
+<!-- 
 <div class="container">
   <section class="about-section">
     <div class="content-wrapper">
@@ -73,4 +73,42 @@
   <div class="contact-button-wrapper animate-element" #animateOnScroll>
     <button class="contact-button">დაგვიკავშირდით</button>
   </div>
-</div> 
+</div>  -->
+
+
+
+
+
+<div class="container">
+  <section class="about-section">
+    <div class="content-wrapper">
+      <!-- ხელმძღვანელის ფოტო -->
+      <div class="person-image scroll-animate" #scrollAnimate>
+        <img src="leqso 2 - Copy.png" alt="ხელმძღვანელი">
+      </div>
+
+      <!-- ტექსტური ინფორმაცია -->
+      <div class="about-content scroll-animate" #scrollAnimate>
+        <h2>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი</h2>
+        <div class="founder-name">ალექსი ყულჯანიშვილი</div>
+
+        <div class="company-description">
+          <p>
+            კომპანია ,,მესხი 2000" ბაზარზე 2000 წელს გამოჩნდა და დაარსების დღიდან აქტიურად ემსახურება მომხმარებელს. ჩვენი მიზანია დამკვეთის ერთგულების მოპოვება, ხარისხის კონტროლი, სიახლეების ათვისება და განვითარებისკენ მუდმივი სწრაფვა.
+          </p>
+        </div>
+
+        <div class="slogan">
+          "ინოვაცია და მაღალი ხარისხი ჩვენი მომხმარებლის კეთილგანწყობის საწინდარია."
+        </div>
+
+        <a href="#" class="button scroll-animate" #scrollAnimate>გაიგე მეტი</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- კონტაქტის ღილაკი -->
+  <div class="contact-button-wrapper">
+    <button class="contact-button scroll-animate" #scrollAnimate>დაგვიკავშირდით</button>
+  </div>
+</div>
