--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,11 +5,11 @@
                     <img src="logo.png" alt="">
                 </div>
                 <ul class="nav-links">
+                    <li><a href="#about">About </a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#capabilities">Capabilities</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#owner">Owner</a></li>
-                    <li><a href="#feedback">Feedback</a></li>
+                    <li><a href="#">##</a></li>
+                    <li><a href="#">##</a></li>
                 </ul>
                 <a href="#contact" class="contact-button">Contact Us</a>
             </nav>
