--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-   <div class="video-container">
+<div class="video-container">
 
     <div class="text-3d">Meskhi 2000</div>
 
@@ -12,74 +12,7 @@
   </div> 
 
 
-
-<!--   
-<div class="container">
-  <section class="about-section"  >
-    <div class="content-wrapper">
-      <div class="person-image" >
-        <img src="leqso 2 - Copy.png" alt="ხელმძღვანელი">
-      </div>
-      
-      <div class="about-content">
-        <h2>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი        </h2>
-        <div class="founder-name">ალექსი ყულჯანიშვილი</div>
-        
-        <div class="company-description">
-          <p>კომპანია ,,მესხი 2000" ბაზარზე 2000 წელს გამოჩნდა და დაარსების დღიდან აქტიურად ემსახურება მომხმარებელს, რომლის მიზანია დამკვეთის ერთგულების მოპოვება, ხარისხის კონტროლი, სიახლეების ათვისება და განვითარებისკენ მუდმივი სწრაფვა. უახლესი ტექნოლოგიებით ვამზადებთ საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.</p>
-        </div>
-        
-        <div class="slogan">
-          ინოვაცია და მაღალი ხარისხი ჩვენი მომხმარებლის კეთილგანწყობის საწინდარია - ,,მესხი 2000"
-        </div>
-        
-        <a href="#" class="button">გაიგე მეტი</a>
-      </div>
-    </div>
-  </section>
-  
-  <div class="contact-button-wrapper">
-    <button class="contact-button">დაგვიკავშირდით</button>
-  </div>
-</div> 
-
- -->
-
-<!-- 
-<div class="container">
-  <section class="about-section">
-    <div class="content-wrapper">
-      <div class="person-image animate-element" #animateOnScroll>
-        <img src="leqso 2 - Copy.png" alt="ხელმძღვანელი">
-      </div>
-      
-      <div class="about-content">
-        <h2 class="animate-element" #animateOnScroll>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი</h2>
-        <div class="founder-name animate-element" #animateOnScroll>ალექსი ყულჯანიშვილი</div>
-        
-        <div class="company-description animate-element" #animateOnScroll>
-          <p>კომპანია ,,მესხი 2000" ბაზარზე 2000 წელს გამოჩნდა და დაარსების დღიდან აქტიურად ემსახურება მომხმარებელს, რომლის მიზანია დამკვეთის ერთგულების მოპოვება, ხარისხის კონტროლი, სიახლეების ათვისება და განვითარებისკენ მუდმივი სწრაფვა. უახლესი ტექნოლოგიებით ვამზადებთ საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.</p>
-        </div>
-        
-        <div class="slogan animate-element" #animateOnScroll>
-          ინოვაცია და მაღალი ხარისხი ჩვენი მომხმარებლის კეთილგანწყობის საწინდარია - ,,მესხი 2000"
-        </div>
-        
-        <a href="#" class="button animate-element" #animateOnScroll>გაიგე მეტი</a>
-      </div>
-    </div>
-  </section>
-  
-  <div class="contact-button-wrapper animate-element" #animateOnScroll>
-    <button class="contact-button">დაგვიკავშირდით</button>
-  </div>
-</div>  -->
-
-
-
-
-
-<div class="container">
+<div class="container" id="about">
   <section class="about-section">
     <div class="content-wrapper">
       <!-- ხელმძღვანელის ფოტო -->
@@ -105,10 +38,41 @@
         <a href="#" class="button scroll-animate" #scrollAnimate>გაიგე მეტი</a>
       </div>
     </div>
+    <div #scrollAnimate  class="scroll-animate">
+<div class="bigword">
+  <p #scrollAnimate class="scroll-animate">ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას.</p>
+</div>
+</div>
   </section>
 
-  <!-- კონტაქტის ღილაკი -->
-  <div class="contact-button-wrapper">
-    <button class="contact-button scroll-animate" #scrollAnimate>დაგვიკავშირდით</button>
+
+
+
+<div #scrollAnimate class="scroll-animate" id="skills"> 
+<section class="skill-cap"> 
+  <p class="sk">--Skills--</p>
+  <div class="card" >
+    <h2>დამზადება</h2>
+    <p>ვამზადეთ უმაღლესო ხარისხის საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.</p>
   </div>
+  <div class="card">
+    <h2>პროდუქტი</h2>
+    <p>ვვამზადებთ ფრეზებს ნებისმიერ კომფიგურაციაზე.როგორც HSS ასევე "პაბედიტით".</p>
+  </div>
+  <div class="card">
+    <h2>ალესვები</h2>
+    <p>ფრეზის პირების,ინოვაციური სიახლე. PCD (ალმასის) ფრეზების,ლენტური ხერების შედუღება და ალესვა,სტამბის დანების ფუგანების პირების,"კოპირი" ფრეზების ალესვა,ცირკული ხერხის პირების,ფუგანის პირების,ალუმინის,მეტალის და ხის დასამუშავებელი ცირკული ხერხები</p>
+  </div>
+  <div class="card">
+    <h2>გამოჩარხვა</h2>
+    <p>ვჩარავთ ნებისმიერი ფრეზს და დანებს უმაღლეს ხარისხში საუკეთესო დანადგარებით.</p>
+  </div>
+  <div class="card">
+    <h2>გრავირება</h2>
+    <p>ვაკეთებთ გრავირებას უმაღლესი ხარისხით უახლესი აპარატურით.</p>
+  </div>
+</section>
 </div>
+
+
+<br><br><br><br><br><br><br>
