--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="video-container">
+<div class="video-container" id="main">
 
     <div class="text-3d">Meskhi 2000</div>
 
@@ -20,7 +20,6 @@
         <img src="leqso 2 - Copy.png" alt="ხელმძღვანელი">
       </div>
 
-      <!-- ტექსტური ინფორმაცია -->
       <div class="about-content scroll-animate" #scrollAnimate>
         <h2>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი</h2>
         <div class="founder-name">ალექსი ყულჯანიშვილი</div>
