--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="logo.png" alt="">
+                    <img src="logo.png" href="#main" alt="" >
                 </div>
                 <ul class="nav-links">
                     <li><a href="#about">About </a></li>
