--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,28 +50,46 @@
 
 <section class="services" id="services">
 <div #scrollAnimate class="scroll-animate" id="skills"> 
-<section class="skill-cap"> 
-  <p class="sk">--Skills--</p>
-  <div class="card" >
-    <h2>დამზადება</h2>
-    <p>ვამზადეთ უმაღლესო ხარისხის საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.</p>
-  </div>
-  <div class="card">
-    <h2>პროდუქტი</h2>
-    <p>ვვამზადებთ ფრეზებს ნებისმიერ კომფიგურაციაზე.როგორც HSS ასევე "პაბედიტით".</p>
-  </div>
-  <div class="card">
-    <h2>ალესვები</h2>
-    <p>ფრეზის პირების,ინოვაციური სიახლე. PCD (ალმასის) ფრეზების,ლენტური ხერების შედუღება და ალესვა,სტამბის დანების ფუგანების პირების,"კოპირი" ფრეზების ალესვა,ცირკული ხერხის პირების,ფუგანის პირების,ალუმინის,მეტალის და ხის დასამუშავებელი ცირკული ხერხები</p>
-  </div>
-  <div class="card">
-    <h2>გამოჩარხვა</h2>
-    <p>ვჩარავთ ნებისმიერი ფრეზს და დანებს უმაღლეს ხარისხში საუკეთესო დანადგარებით.</p>
-  </div>
-  <div class="card">
-    <h2>გრავირება</h2>
-    <p>ვაკეთებთ გრავირებას უმაღლესი ხარისხით უახლესი აპარატურით.</p>
-  </div>
+  <section class="skills-section">
+    <h2 class="skills-title">  Skills  </h2>
+    <div class="skills-container">
+        <div class="skill-card">
+            <div class="skill-icon">
+                <i class="fas fa-chart-line"></i>
+            </div>
+            <h3 class="skill-subtitle">დაგეგმვა</h3>
+            <p class="skill-description">
+                სტრატეგიული დაგეგმვა, პროფესიონალური კონსულტაციები ბიზნეს პროცესებისა და ორგანიზაციული განვითარების საკითხებში. PCD (სამუშაო) სისტემების დანერგვა.
+            </p>
+        </div>
+        <div class="skill-card">
+            <div class="skill-icon">
+                <i class="fas fa-rocket"></i>
+            </div>
+            <h3 class="skill-subtitle">წარმატება</h3>
+            <p class="skill-description">
+                გუნდის წარმადობისა და ეფექტიანობის გაზრდა, HSS სისტემის დანერგვა და მართვა.
+            </p>
+        </div>
+        <div class="skill-card">
+            <div class="skill-icon">
+                <i class="fas fa-brain"></i>
+            </div>
+            <h3 class="skill-subtitle">გამოცდილება</h3>
+            <p class="skill-description">
+                მრავალწლიანი გამოცდილება კონსულტაციისა და ორგანიზაციული მართვის სფეროში.
+            </p>
+        </div>
+        <div class="skill-card">
+            <div class="skill-icon">
+                <i class="fas fa-hands-helping"></i>
+            </div>
+            <h3 class="skill-subtitle">მხარდაჭერა</h3>
+            <p class="skill-description">
+                უწყვეტი მხარდაჭერა და კონსულტაცია ბიზნეს პროცესების გაუმჯობესებისთვის.
+            </p>
+        </div>
+    </div>
 </section>
 </div>
 </section>
