--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,41 +57,57 @@
             <div class="skill-icon">
                 <i class="fas fa-chart-line"></i>
             </div>
-            <h3 class="skill-subtitle">დაგეგმვა</h3>
+            <h3 class="skill-subtitle">დამზადება</h3>
             <p class="skill-description">
-                სტრატეგიული დაგეგმვა, პროფესიონალური კონსულტაციები ბიზნეს პროცესებისა და ორგანიზაციული განვითარების საკითხებში. PCD (სამუშაო) სისტემების დანერგვა.
+              ვამზადეთ უმაღლესო ხარისხის საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.
             </p>
         </div>
         <div class="skill-card">
             <div class="skill-icon">
                 <i class="fas fa-rocket"></i>
             </div>
-            <h3 class="skill-subtitle">წარმატება</h3>
+            <h3 class="skill-subtitle">ჩვენი პროდუქტი</h3>
             <p class="skill-description">
-                გუნდის წარმადობისა და ეფექტიანობის გაზრდა, HSS სისტემის დანერგვა და მართვა.
+              ვამზადებთ ფრეზებს ნებისმიერ კომფიგურაციაზე.როგორც HSS ასევე "პაბედიტით".
             </p>
         </div>
         <div class="skill-card">
             <div class="skill-icon">
                 <i class="fas fa-brain"></i>
             </div>
-            <h3 class="skill-subtitle">გამოცდილება</h3>
+            <h3 class="skill-subtitle">სამუშოა დრო</h3>
             <p class="skill-description">
-                მრავალწლიანი გამოცდილება კონსულტაციისა და ორგანიზაციული მართვის სფეროში.
+              ორშაბათი-შაბათი, დილის 9 საათიდან საღაოს 5 საათამდე.
             </p>
         </div>
         <div class="skill-card">
             <div class="skill-icon">
                 <i class="fas fa-hands-helping"></i>
             </div>
-            <h3 class="skill-subtitle">მხარდაჭერა</h3>
+            <h3 class="skill-subtitle">ალესვები</h3>
             <p class="skill-description">
-                უწყვეტი მხარდაჭერა და კონსულტაცია ბიზნეს პროცესების გაუმჯობესებისთვის.
+              ფრეზის პირების,ინოვაციური სიახლე. PCD (ალმასის) ფრეზების,ლენტური ხერების შედუღება და ალესვა,სტამბის დანების ფუგანების პირების,"კოპირი" ფრეზების ალესვა,ცირკული ხერხის პირების,ფუგანის პირების,ალუმინის,მეტალის და ხის დასამუშავებელი ცირკული ხერხები
             </p>
         </div>
+        <div class="skill-card">
+          <div class="skill-icon">
+              <i class="fas fa-hands-helping"></i>
+          </div>
+          <h3 class="skill-subtitle">გამოჩარხვა</h3>
+          <p class="skill-description">
+            ვჩარავთ ნებისმიერი ფრეზს და დანებს უმაღლეს ხარისხში საუკეთესო დანადგარებით.
+          </p>
+      </div>
+      <div class="skill-card">
+        <div class="skill-icon">
+            <i class="fas fa-hands-helping"></i>
+        </div>
+        <h3 class="skill-subtitle">გრავირება</h3>
+        <p class="skill-description">
+          ვაკეთებთ გრავირებას უმაღლესი ხარისხით უახლესი აპარატურით.
+        </p>
+    </div>
     </div>
 </section>
 </div>
 </section>
-
-<br><br><br><br><br><br><br>
