--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,7 +55,7 @@
     <div class="skills-container">
         <div class="skill-card">
             <div class="skill-icon">
-                <i class="fas fa-chart-line"></i>
+              <i class="fa-solid fa-industry"></i>
             </div>
             <h3 class="skill-subtitle">დამზადება</h3>
             <p class="skill-description">
@@ -64,7 +64,7 @@
         </div>
         <div class="skill-card">
             <div class="skill-icon">
-                <i class="fas fa-rocket"></i>
+              <i class="fa-solid fa-boxes-stacked"></i>
             </div>
             <h3 class="skill-subtitle">ჩვენი პროდუქტი</h3>
             <p class="skill-description">
@@ -73,7 +73,7 @@
         </div>
         <div class="skill-card">
             <div class="skill-icon">
-                <i class="fas fa-brain"></i>
+              <i class="fa-solid fa-clock"></i>
             </div>
             <h3 class="skill-subtitle">სამუშოა დრო</h3>
             <p class="skill-description">
