--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -312,7 +312,7 @@ box-shadow:  -20px -20px 60px #0d1319,
     color: $gold-darkened;
     text-shadow: 0 22px 5px rgba(0, 0, 0, 0.5);
     line-height: 1.3;
-    margin: 0 auto; 
+    margin: 0 auto;  
   }
 }
 
@@ -329,58 +329,6 @@ box-shadow:  -20px -20px 60px #0d1319,
   transform: translateY(0);
 }
 
-// .services {
-//   height: 100vh;
-//   background: radial-gradient(
-//     circle at center, 
-//     #2c3e50 0%, 
-//     #0a0e17 100%
-//   );
-//   .skill-cap {
-//   display: grid;
-//   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-//   max-width: 1200px;
-//   gap: 20px;
-//   padding-top: 350px;
-//   margin: 0 auto;
-//   .card {
-// box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-// backdrop-filter: blur( 5.5px );
-// -webkit-backdrop-filter: blur( 5.5px );
-// border-radius: 65% 35% 85% 15% / 12% 69% 31% 88% ;
-// border: 1px solid rgba( 255, 255, 255, 0.18 );
-//     padding: 20px;
-//     transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-//     h2 {
-//       font-size: 1.5rem;
-//       color: $gold-light;
-//       margin-bottom: 15px;
-//     }
-
-//     p {
-//       font-size: 1rem;
-//       color: #666;
-//       line-height: 1.6;
-//     }
-
-//     &:hover {
-//       transform: translateY(-10px);
-//       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-//     }
-//   }
-// }
-// .sk {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     color: $gold-darkened;
-//     font-size: 2.5rem;
-// }
-// }
-// Mixins
-
-
 
 
 @mixin flex-center {
@@ -393,7 +341,6 @@ box-shadow:  -20px -20px 60px #0d1319,
   transition: all 0.3s ease-in-out;
 }
 .services {
-   height: 100vh;
    background: radial-gradient(
    circle at center, 
     #2c3e50 0%, 
@@ -401,6 +348,8 @@ box-shadow:  -20px -20px 60px #0d1319,
     );
 .skills-section {
   padding: 9rem 2rem;
+  margin-bottom: 100px;   // unda wavshalo mere 
+
   
   .skills-title {
       text-align: center;
@@ -412,9 +361,12 @@ box-shadow:  -20px -20px 60px #0d1319,
   }
 
   .skills-container {
-      display: flex;
-      justify-content: space-between;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 2rem;
       gap: 1.5rem;
+      margin-top: 60px;
+
   }
 
   .skill-card {
@@ -440,10 +392,8 @@ box-shadow:  -20px -20px 60px #0d1319,
           height: 100px;
           margin: 0 auto 1.5rem;
           border-radius: 50%;
-          background: url(/logo.png);
           background-size: cover;
           background-position: center;
-          
           border: 2px solid rgba($gold-primary, 0.3);
           
           i {
