--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,5 @@
-<form class="contact-form" action="#" method="post">
+<section>
+<form class="contact-form" action="#" method="post" id="contact">
     <h2>Contact Us</h2>
     
     <div class="form-group">
@@ -23,3 +24,6 @@
     
     <button type="submit" class="submit-btn">Send Message</button>
 </form>
+
+<p>მალე გიპასუხებთ, პასუხი მოხდება 24-საათის განმავლობაში, წინააღმდეგ შემთხვევაში დაგვიკავშირდით ნომერზე</p>
+</section>
