--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
-<!-- <section class="working-hours">
+<section class="working-hours">
     <div class="container">
       <h3>სამუშოა დრო</h3>
       <p>ორშაბათი-შაბათი, დილის 9 საათიდან საღაოს 5 საათამდე.</p>
     </div>
-  </section> -->
+  </section>
