--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -110,3 +110,9 @@
 
 
 <!-- unda davamato boostrap da gamoviyeno image sliderze da aseve contact ze rom uketesad gamovides aseve dges rac axsna isac shegvidzlia gamoviyenot (ang11) -->
+
+
+
+
+
+<!-- naxe mwvane bloknotshi chawerili meskhis info da gaecani da imis mixedvit unda imushao darchenili periodi -->
