add new style need some fix and better color on bg and - about and move to about

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,11 @@
 <div class="container" >
   <section class="about-section">
     <div class="content-wrapper">
-      <!-- ხელმძღვანელის ფოტო -->
-      <div class="person-image scroll-animate" #scrollAnimate>
+      <div class="person-image scroll-animate" >
         <img src="leqso 2 - Copy.png" alt="ხელმძღვანელი">
       </div>
 
-      <div class="about-content scroll-animate" #scrollAnimate>
+      <div class="about-content scroll-animate">
         <h2>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი</h2>
         <div class="founder-name">ალექსი ყულჯანიშვილი</div>
 
@@ -30,7 +29,7 @@
           "ინოვაცია და მაღალი ხარისხი ჩვენი მომხმარებლის კეთილგანწყობის საწინდარია."
         </div>
 
-        <a href="#" class="button scroll-animate" #scrollAnimate>გაიგე მეტი</a>
+        <a href="#" class="button scroll-animate" >გაიგე მეტი</a>
       </div>
     </div>
     <div #scrollAnimate  class="scroll-animate">
